# multilingual-mqm-benchmark

./: .gitignore  README.md  TIMELOG.md  pyproject.toml  settings.toml
scripts/: run_pipeline.py
scripts/slurm/: run_comet.sh  run_gemba.sh
src/mqmbench/: __init__.py  config.py  pipeline.py
src/mqmbench/analysis/: correlation.py
src/mqmbench/metrics/: __init__.py  bertscore.py  bleu.py  chrf.py  comet.py  gemba.py
tests/: test_converter.py
